k8s/01-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
  - protocol: TCP
    port: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo
subsets:
  - addresses:
      - ip: "10.0.1.92" # Make sure this is your correct MongoDB Private IP
    ports:
      - port: 27017
